clusters/home/apps/development/forgejo/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-http
  namespace: forgejo
  annotations:
    external-dns.kubernetes.io/hostname: "code.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`code.layertwo.dev`)
    kind: Rule
    services:
    - name: forgejo-http
      port: 3000
